--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
+}
+
+.download-icon:hover {
+  cursor: pointer;
+  opacity: .8;
 }
